Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55345

Freetype lcdfilter not used when available at runtime

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.6.2
    • 5.6.0
    • GUI: Font handling
    • None

      We decided whether to use freetype's lcdfilter or not at compile time based on the configuration of the freetype version build against.

      This means that Qt built on a machine without subpixel rendering enabled, will when run on machine that does have it enabled, use our own fallback filters instead of freetype's.

        For Gerrit Dashboard: QTBUG-55345
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            allan.jensen Allan Sandfeld Jensen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes